--- a/src/components/Categories/Categories.scss
+++ b/src/components/Categories/Categories.scss
@@ -66,15 +66,15 @@
                 }
 
                 img {
-                    object-fit: cover;
+                    object-fit: contain;
                     width: 100%;
-                    height: 100%;
                 }
 
                 img:hover {
                     transform: scale(1.1);
                     transition: 1s ease-out all;
                 }
+
             }
 
         }
